name:                hlbfgs
version:             0.0.1.0
synopsis:            Haskell interface to L-BFGS reference implementation
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Scott French
maintainer:          scott.w.french@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Math.HLBFGS
  build-depends:       base >=4.5, vector >=0.10
  hs-source-dirs:      src
  c-sources:           csrc/driver.c
  extra-libraries:     lbfgs, gfortran

Test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: tests
  build-depends:  base >=4.5, vector >=0.10, HUnit >=1.2, random >=1.0, hlbfgs
